# GeneNet

./: .env  Cargo.toml  README.md
backend/: graph.py  main.py  prediction.py  requirements.txt  research.ipynb
data/: CTD_curated_genes_diseases.csv  CTD_stripped.csv
src/: data.rs  main.rs  mod.rs  models.rs  ui.rs
